--- a/zeus_landscapes/WebContent/zeus/landscapes/index.html
+++ b/zeus_landscapes/WebContent/zeus/landscapes/index.html
@@ -52,7 +52,7 @@
 						<td class="text-muted">{{entry.metadata.namespace}}</td>
 						<td ng-show="entry.url"><a href="{{entry.url}}" target="_blank">{{entry.metadata.name}}</a></td>
 						<td ng-hide="entry.url">{{entry.metadata.name}}</td>
-						<td class="text-muted">{{entry.status.updatedReplicas}}/{{entry.status.replicas}}</td>
+						<td class="text-muted">{{entry.status.availableReplicas}}/{{entry.status.replicas}}</td>
 						<td class="text-muted"><i<span ng-repeat="container in entry.spec.template.spec.containers"><i>{{container.image}}</i><span></td>
 						<td><button type="button" class="close" ng-click="setToBeDeleted(entry)" data-toggle="modal" data-target="#dialogDeleteDeployment"><i class="fa fa-trash-o"></i></button></td>
 					</tr>
@@ -120,7 +120,7 @@
 	<script type="text/javascript">
 		angular.module('page', ['ngAnimate', 'ui.bootstrap']);
 		angular.module('page').controller('LandscapeController', function ($scope, $http) {
-			$scope.namespace = 'dev-account';
+			$scope.namespace = 'default';
 			$scope.deploymentData = {
 				'name': null,
 				'image': 'docker.io/dirigiblelabs/dirigible-tomcat:latest',
