--- a/zeus_landscapes/WebContent/zeus/landscapes/index.html
+++ b/zeus_landscapes/WebContent/zeus/landscapes/index.html
@@ -72,8 +72,41 @@
 					<h4 class="modal-title" id="dialogCreateDeploymentLabel">Create Deployment</h4>
 				</div>
 				<div class="modal-body">
-					<p>Name:</p>
-					<input type="text" class="form-control" ng-model="deploymentData.name">
+
+					<div class="form-group row">
+					  <label class="col-xs-3 col-form-label">Name</label>
+					  <div class="col-xs-9">
+					    <input class="form-control" type="text" placeholder="Deployment Name" ng-model="deploymentData.name">
+					  </div>
+					</div>
+					<div class="form-check row">
+					  <label class="col-xs-3 col-form-label">Auto-Scale</label>
+					  <div class="col-xs-9">
+					    <input class="form-check-input" type="checkbox" placeholder="Deployment Name" ng-model="deploymentData.autoscale.enabled">
+					  </div>
+					</div>
+
+					<div ng-show="deploymentData.autoscale.enabled">
+						<hr>
+						<div class="form-group row">
+							<label class="col-xs-3 col-form-label">CPU %</label>
+							<div class="col-xs-9">
+								<input class="form-control" type="number" placeholder="CPU %" ng-model="deploymentData.autoscale.targetCPUUtilizationPercentage">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label class="col-xs-3 col-form-label">Min</label>
+							<div class="col-xs-9">
+								<input class="form-control" type="number" placeholder="Min Replicas" ng-model="deploymentData.autoscale.minReplicas">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label class="col-xs-3 col-form-label">Max</label>
+							<div class="col-xs-9">
+								<input class="form-control" type="number" placeholder="Max Replicas" ng-model="deploymentData.autoscale.maxReplicas">
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary" ng-click="create()" data-dismiss="modal">Deploy</button>
@@ -128,7 +161,13 @@
 				'env': [{
 					'name': 'DefaultDB_username',
 					'value': 'root'
-				}]
+				}],
+				'autoscale': {
+					'enabled': false,
+					'minReplicas': 1,
+					'maxReplicas': 5,
+					'targetCPUUtilizationPercentage': 50
+				}
 			};
 
 			loadDeployments();
@@ -150,6 +189,9 @@
 					});
 				});
 				$scope.deploymentData.name = null;
+				$scope.deploymentData.autoscale.enabled = false;
+				$scope.deploymentData.autoscale.minReplicas = 1;
+				$scope.deploymentData.autoscale.maxReplicas = 5;
 			};
 
 			$scope.setToBeDeleted = function(deployment) {
