Updates "Application Hooks" to handle "Code Dev Instances"

--- a/zeus_landscapes/WebContent/zeus/landscapes/index.html
+++ b/zeus_landscapes/WebContent/zeus/landscapes/index.html
@@ -482,7 +482,7 @@
 					'name': $scope.ingressToBeAdded.name,
 					'namespace': $scope.ingressToBeAdded.service.metadata.namespace,
 					'applicationName': $scope.applicationName,
-					'host': $scope.ingressToBeAdded.subDomain + '.apps.eu-central-1.dkom.onvms.com',
+					'host': $scope.ingressToBeAdded.subDomain + '.apps.eu-central-1.sap.onvms.com',
 					'path': $scope.ingressToBeAdded.path,
 					'serviceName': $scope.ingressToBeAdded.service.metadata.name,
 					'servicePort': $scope.ingressToBeAdded.service.spec.ports[0].port
